--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,3 +1,5 @@
+
+
 name: CI/CD Pipeline
 
 on:
@@ -9,6 +11,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+
 
     steps:
     - name: Checkout repository
@@ -52,6 +55,7 @@ jobs:
       security-events: write # for stackhawk/hawkscan-action to upload code scanning alert info
     name: StackHawk
     runs-on: ubuntu-20.04
+    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -74,22 +78,29 @@ jobs:
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     name: Codacy Security Scan
     runs-on: ubuntu-latest
-    # needs: security_analysis
-
+    needs: build
     steps:
+      # Checkout the repository to the GitHub Actions runner
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # Execute Codacy Analysis CLI and generate a SARIF output with the security issues identified during the analysis
       - name: Run Codacy Analysis CLI
         uses: codacy/codacy-analysis-cli-action@d840f886c4bd4edc059706d09c6a1586111c540b
         with:
+          # Check https://github.com/codacy/codacy-analysis-cli#project-token to get your project token from your Codacy repository
+          # You can also omit the token and run the tools that support default configurations
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           verbose: true
           output: results.sarif
           format: sarif
+          # Adjust severity of non-security issues
           gh-code-scanning-compat: true
+          # Force 0 exit code to allow SARIF file generation
+          # This will handover control about PR rejection to the GitHub side
           max-allowed-issues: 2147483647
 
+      # Upload the SARIF file generated in the previous step
       - name: Upload SARIF results file
         uses: github/codeql-action/upload-sarif@v2
         with:
@@ -128,16 +139,27 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-
+  
     needs: codacy-security-scan
-
+  
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
+  
+      - name: Deploy to Server
+        run: |
+          python -m pip install --upgrade pip
+          pip install build
+  
+      - name: Build package
+        run: python -m build
+  
+      - name: Publish package
+        uses: pypa/gh-action-pypi-publish@main
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
 
-    - name: Deploy to Server
-      run: |
-        # Comandos para fazer o deploy da sua aplicação no servidor
+      # Comandos para fazer o deploy da sua aplicação no servidor
   evidence:
     name: Evidence
     runs-on: ubuntu-latest
@@ -150,24 +172,4 @@ jobs:
 
     - name: Show Running Processes
       run: ps aux
-  # security_analysis:
-  #   name: Análise de segurança
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  
-  #   steps:
-  #   - name: Checkout repository
-  #     uses: actions/checkout@v3
-  
-  #   - name: Initialize CodeQL
-  #     uses: github/codeql-action/init@v2
-  #     with:
-  #       languages: ${{ matrix.language }}
-  
-  #   - name: Build with Maven
-  #     run: mvn clean install
-  
-  #   - name: Perform CodeQL Analysis
-  #     uses: github/codeql-action/analyze@v2
-  #     with:
-  #       category: "/language:${{ matrix.language }}"
+
