--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,34 +43,33 @@ jobs:
           codeScanningAlerts: true
           githubToken: ${{ github.token }}
 
-  codacy-security-scan:
-    name: Codacy Security Scan
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  # codacy-security-scan:
+  #   name: Codacy Security Scan
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: Run Codacy Analysis CLI
-        uses: codacy/codacy-analysis-cli-action@d840f886c4bd4edc059706d09c6a1586111c540b
-        with:
-          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-          verbose: true
-          output: results.sarif
-          format: sarif
-          gh-code-scanning-compat: true
-          max-allowed-issues: 2147483647
+  #     - name: Run Codacy Analysis CLI
+  #       uses: codacy/codacy-analysis-cli-action@d840f886c4bd4edc059706d09c6a1586111c540b
+  #       with:
+  #         project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+  #         verbose: true
+  #         output: results.sarif
+  #         format: sarif
+  #         gh-code-scanning-compat: true
+  #         max-allowed-issues: 2147483647
 
-      - name: Upload SARIF results file
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: results.sarif
+  #     - name: Upload SARIF results file
+  #       uses: github/codeql-action/upload-sarif@v2
+  #       with:
+  #         sarif_file: results.sarif
 
   analyze:
     name: Analyze
     runs-on: ubuntu-latest
     timeout-minutes: 360
-    needs: codacy-security-scan
     strategy:
       fail-fast: false
       matrix:
@@ -95,7 +94,6 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: codacy-security-scan
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
