--- a/.github/workflows/sec_test.yml
+++ b/.github/workflows/sec_test.yml
@@ -1,119 +1,66 @@
-name: CI/CD Pipeline
+name: Python application
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+permissions:
+  contents: read
 
 jobs:
   build:
-    name: Build
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Test with pytest
+      run: |
+        pytest
 
-      - name: Build Application
-        run: |
-          # Comandos para construir sua aplicação
-          # Exemplo: ./build.sh
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: my-artifact
-          path: path/to/artifact
-
-  stackhawk:
-    permissions:
-      contents: read
-      security-events: write
-    name: StackHawk
-    runs-on: ubuntu-20.04
-    needs: build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Start your service
-        run: ./your-service.sh &
-
-      - name: Run HawkScan
-        uses: stackhawk/hawkscan-action@4c3258cd62248dac6d9fe91dd8d45928c697dee0
-        continue-on-error: true
-        with:
-          apiKey: ${{ secrets.HAWK_API_KEY }}
-          codeScanningAlerts: true
-          githubToken: ${{ github.token }}
-
-  codacy-security-scan:
-    permissions:
-      contents: read
-      security-events: write
-      actions: read
-    name: Codacy Security Scan
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Run Codacy Analysis CLI
-        uses: codacy/codacy-analysis-cli-action@d840f886c4bd4edc059706d09c6a1586111c540b
-        with:
-          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-          verbose: true
-          output: results.sarif
-          format: sarif
-          gh-code-scanning-compat: true
-          max-allowed-issues: 2147483647
-
-      - name: Upload SARIF results file
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: results.sarif
-
-  analyze:
-    name: Analyze
-    runs-on: ubuntu-latest
-    timeout-minutes: 360
-    permissions:
-      actions: read
-      security-events: write
-  
-    strategy:
-      fail-fast: false
-      matrix:
-        language: ['java-kotlin']
-  
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-  
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2
-        with:
-          languages: ${{ matrix.language }}
-  
-      - name: Build with Maven
-        run: mvn clean install
-  
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v2
-        with:
-          category: "/language:${{ matrix.language }}"
+    - name: Create artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: python-publish-app-artifact
+        path: ./
 
   deploy:
-    name: Deploy to Some Place
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  
+    needs: build  
+    
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: python-publish-app-artifact
 
-      - name: Copy code to destination
+      - name: Deploy to server
+        env:
+          DEPLOY_KEY: ${{ secrets.SENAC_AZURE_VM }}
         run: |
-          # Crie o diretório de destino se não existir
-          mkdir -p https://github.com/natansales221/devopssenac/tree/main/.github/workflows
+          mkdir -p ~/.ssh
+          echo "$DEPLOY_KEY" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
 
-          # Copie todos os arquivos do diretório de trabalho para o diretório de destino
-          cp -r . https://github.com/natansales221/devopssenac/tree/main/.github/workflows
+          # Add the SSH key to the known hosts
+          ssh-keyscan 13.92.34.6 >> ~/.ssh/known_hosts
+
+          # Deploy the artifact to the server
+          ssh azureadmin@13.92.34.6 "mkdir -p /app/data"
+          scp -r ~/work/actions-python-lab/actions-python-lab/* azureadmin@13.92.34.6:/app/data/
