--- a/.github/workflows/fullpipeline.yml
+++ b/.github/workflows/fullpipeline.yml
@@ -1,16 +1,15 @@
 name: CI/CD Pipeline
 
-
 on:
   push:
     branches:
       - main
 
-
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+
 
     steps:
     - name: Checkout repository
@@ -18,11 +17,7 @@ jobs:
 
     - name: Build Application
       run: |
-        # Mudança para o diretório do projeto (ajuste conforme a estrutura do seu repositório)
-        cd path/to/project
 
-        # Execução do Maven com o caminho específico para o pom.xml
-        mvn --batch-mode --update-snapshots verify
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
@@ -30,49 +25,23 @@ jobs:
         name: my-artifact
         path: path/to/artifact
 
-  security_analysis:
-    name: Security Analysis
-    runs-on: ubuntu-latest
-
-    needs: build
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v2
-      with:
-        languages: java-kotlin
-
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v2
-      with:
-        category: "/language:java-kotlin"
-
   stackhawk:
     permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for stackhawk/hawkscan-action to upload code scanning alert info
+      contents: read
+      security-events: write
     name: StackHawk
     runs-on: ubuntu-20.04
-    needs: security_analysis  
-
+    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-    
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: my-artifact
 
       - name: Start your service
-        run: java -jar path/to/artifact/actions-java-lab-1.0-SNAPSHOT-jar-with-dependencies.jar &
+        run: ./your-service.sh &          
 
       - name: Run HawkScan
         uses: stackhawk/hawkscan-action@4c3258cd62248dac6d9fe91dd8d45928c697dee0
-        continue-on-error: true
+        continue-on-error: true        
         with:
           apiKey: ${{ secrets.HAWK_API_KEY }}
           codeScanningAlerts: true
@@ -80,13 +49,12 @@ jobs:
 
   codacy-security-scan:
     permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      contents: read 
+      security-events: write
+      actions: read 
     name: Codacy Security Scan
     runs-on: ubuntu-latest
-    needs: security_analysis
-
+    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -105,3 +73,71 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: results.sarif
+  analyze:
+    name: Analyze
+
+    runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
+    timeout-minutes: ${{ (matrix.language == 'swift' && 120) || 360 }}
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'java-kotlin' ]
+
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v2
+      with:
+        languages: ${{ matrix.language }}
+
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v2
+
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v2
+      with:
+        category: "/language:${{matrix.language}}"
+
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+
+    needs: 
+     - codacy-security-scan
+     - stackhawk
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Deploy to Server
+      #run: |
+      run: |
+          mkdir -p ~/.ssh
+          echo "$DEPLOY_KEY" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          # Add the SSH key to the known hosts
+          ssh-keyscan 13.92.34.6 >> ~/.ssh/known_hosts
+          # Deploy the artifact to the server
+          ssh azureadmin@13.92.34.6 "mkdir -p /app/data"
+          scp -r ~/work/actions-python-lab/actions-python-lab/* azureadmin@13.92.34.6:/app/data/
+  evidence:
+    name: Evidence
+    runs-on: ubuntu-latest
+
+    needs: deploy
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Show Running Processes
+      run: ps aux
