--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,92 +1,145 @@
 name: CI/CD Pipeline
+
 on:
   push:
     branches:
       - main
+
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Build Application
-      run: |
-        # Comandos para construir sua aplicação
-        # Exemplo: ./build.sh
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: my-artifact
-        path: path/to/artifact
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Build Application
+        run: |
+          # Commands to build your application
+          # Example: ./build.sh
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: my-artifact
+          path: path/to/artifact
 
   stackhawk:
     permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for stackhawk/hawkscan-action to upload code scanning alert info
+      contents: read
+      security-events: write
     name: StackHawk
     runs-on: ubuntu-20.04
     needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
       - name: Start your service
-        run: ./your-service.sh &                  # ✏️ Update this to run your own service to be scanned
+        run: ./your-service.sh &
+
       - name: Run HawkScan
         uses: stackhawk/hawkscan-action@4c3258cd62248dac6d9fe91dd8d45928c697dee0
-        continue-on-error: true                   # ✏️ Set to false to break your build on scan errors
+        continue-on-error: true
         with:
           apiKey: ${{ secrets.HAWK_API_KEY }}
           codeScanningAlerts: true
           githubToken: ${{ github.token }}
+
   codacy-security-scan:
     permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      contents: read
+      security-events: write
+      actions: read
     name: Codacy Security Scan
     runs-on: ubuntu-latest
-    needs: build
+    needs:
+      - build
+      - stackhawk
     steps:
-      # Checkout the repository to the GitHub Actions runner
       - name: Checkout code
         uses: actions/checkout@v3
-      # Execute Codacy Analysis CLI and generate a SARIF output with the security issues identified during the analysis
+
       - name: Run Codacy Analysis CLI
         uses: codacy/codacy-analysis-cli-action@d840f886c4bd4edc059706d09c6a1586111c540b
         with:
-          # Check https://github.com/codacy/codacy-analysis-cli#project-token to get your project token from your Codacy repository
-          # You can also omit the token and run the tools that support default configurations
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           verbose: true
           output: results.sarif
           format: sarif
-          # Adjust severity of non-security issues
           gh-code-scanning-compat: true
-          # Force 0 exit code to allow SARIF file generation
-          # This will handover control about PR rejection to the GitHub side
           max-allowed-issues: 2147483647
-      # Upload the SARIF file generated in the previous step
+
       - name: Upload SARIF results file
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: results.sarif
+
+  analyze:
+    name: Analyze
+    runs-on: ubuntu-latest
+    timeout-minutes: 360
+    needs:
+      - codacy-security-scan
+    permissions:
+      actions: read
+      security-events: write
+    strategy:
+      fail-fast: false
+      matrix:
+        language: ['java-kotlin']
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: ${{ matrix.language }}
+
+      - name: Build with Maven
+        run: mvn clean install
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
+        with:
+          category: "/language:${{ matrix.language }}"
+
+  
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: codacy-security-scan
+
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Deploy to Server
-      run: |
-        # Comandos para fazer o deploy da sua aplicação no servidor
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Build
+        run: npm run build
+
+      - name: Deploy to Netlify
+        run: npx netlify-cli deploy --prod
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+
+          
+
   evidence:
     name: Evidence
     runs-on: ubuntu-latest
-    needs: deploy
+    needs:
+      - deploy
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Show Running Processes
-      run: ps aux
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Show Running Processes
+        run: ps aux
+
+      - name: Send Evidence to Netlify
+        run: curl -X POST -d '{"message":"Evidence from GitHub Actions"}'https://bright-lokum-b274f4.netlify.app
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
